# SQL_Project

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
src/: config.py
src/db/: add_data.py  data.py  models.py
src/db/migrations/versions/: d574a6089401_.py
src/rest/: crud_rest.py  rest_api.py  rest_config.py
src/rest/yaml/: add_student.yml  add_student_to_the_course.yml  courses.yml  delete_student.yml  find_all.yml  groups_equals_or_less.yml  remove_student.yml
tests/: conftest.py  test_api.py  test_db.py
