[metadata]
name = SQL_project
version = 0.0.1
author = Oleksand Adrianov
author_email = adrianovoleksandr@gmail.com
description = Project that uses SQL
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src